Something went wrong while setting issue due date.
igt@i915_selftest@live@mman - incomplete - Unable to make resource CPU accessible(err = -ENOMEM), *ERROR* Failed to initialise HW following reset (-5), i915/i915_gem_mman_live_selftests: igt_mmap_migrate failed with error -5
<7> [349.019630] i915 0000:03:00.0: [drm:vm_fault_ttm [i915]] Unable to make resource CPU accessible(err = -ENOMEM)
<7> [349.019919] i915 0000:03:00.0: [drm:vm_fault_ttm [i915]] Unable to make resource CPU accessible(err = -ENOMEM)
<6> [349.071812] igt_fill_mappable filled=4095MiB
<7> [349.071917] i915 0000:03:00.0: [drm:intel_power_well_enable [i915]] enabling always-on
<6> [349.078145] igt_mmap(local0, 4) @ 7f8aefcd7000
<7> [349.191008] i915 0000:03:00.0: [drm:intel_power_well_disable [i915]] disabling always-on
<7> [350.145443] i915 0000:03:00.0: [drm:intel_power_well_enable [i915]] enabling always-on
<7> [350.151083] intel_gt_set_wedged called from __memcpy_work+0x2b/0x100 [i915]
<7> [350.252759] i915 0000:03:00.0: [drm:intel_power_well_disable [i915]] disabling always-on
<6> [350.260122] i915 0000:03:00.0: [drm] GuC firmware i915/dg2_guc_70.bin version 70.5.1
<6> [350.260160] i915 0000:03:00.0: [drm] HuC firmware i915/dg2_huc_gsc.bin version 7.10.6
<6> [350.469814] i915 0000:03:00.0: [drm] GuC load failed: status = 0x80000534
<6> [350.469818] i915 0000:03:00.0: [drm] GuC load failed: status: Reset = 0, BootROM = 0x1A, UKernel = 0x05, MIA = 0x00, Auth = 0x02
<7> [350.469821] [drm:__uc_init_hw [i915]] GuC fw load failed: -110; will reset and retry 0 more time(s)
<3> [350.470163] i915 0000:03:00.0: GuC initialization failed -110
<3> [350.470307] i915 0000:03:00.0: Enabling uc failed (-5)
<3> [350.470312] i915 0000:03:00.0: [drm] *ERROR* Failed to initialise HW following reset (-5)
<5> [350.470317] i915 0000:03:00.0: [drm:add_taint_for_CI [i915]] CI tainted:0x9 by intel_gt_reset+0x1e2/0x340 [i915]
<3> [350.499800] i915/i915_gem_mman_live_selftests: igt_mmap_migrate failed with error -5
<7> [350.499817] i915 0000:03:00.0: [drm:intel_power_well_enable [i915]] enabling always-on
<7> [350.499954] i915 0000:03:00.0: [drm:intel_power_well_enable [i915]] enabling DC_off
<7> [350.500205] i915 0000:03:00.0: [drm:gen9_set_dc_state.part.15 [i915]] Setting DC state from 01 to 00
<7> [350.500558] i915 0000:03:00.0: [drm:intel_power_well_enable [i915]] enabling PW_2
<7> [350.500801] i915 0000:03:00.0: [drm:intel_power_well_enable [i915]] enabling PW_A
<7> [350.500980] i915 0000:03:00.0: [drm:intel_power_well_enable [i915]] enabling PW_B
<7> [350.501144] i915 0000:03:00.0: [drm:intel_power_well_enable [i915]] enabling PW_C
<7> [350.501307] i915 0000:03:00.0: [drm:intel_power_well_enable [i915]] enabling PW_D
<7> [350.592629] i915 0000:03:00.0: [drm:drm_client_release] drm_fb_helper
<4> [350.695218] i915: probe of 0000:03:00.0 failed with error -5